# PlanTUI

./: Cargo.toml  README.md
examples/: bob_alice.pmu  complex.pmu
src/: app.rs  args.rs  cli.rs  event.rs  main.rs  render.rs  ui.rs
src/files/: data_dir.rs  mod.rs  pmu.rs  utils.rs
src/logic/: area_separation.rs  clipboard.rs  mod.rs
src/widgets/: text_input.rs
